Add resume and portfolio links

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
+                    <a class="btn btn-xl btn-outline-light" href="assets/resume.pdf">
                         <i class="fas fa-download me-2"></i>
                         Resume
                     </a>
@@ -163,7 +163,7 @@
                 </div>
                 <!-- Contact Section Info-->
                 <div class="contact-info">
-                    <h4>Phone Number: +1 (805)844-7769</h4>
+                    <h4>Phone Number: +1 (805) 844-7769</h4>
                     <h4>Email: jeffreysbogart@gmail.com</h4>
                 </div>
             </div>
@@ -207,7 +207,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/jefflix.png" alt="jefflix.png" />
+                                    <a href="https://jefflixfsp.herokuapp.com/#/">      
+                                        <img class="img-fluid rounded mb-5" src="assets/img/portfolio/jefflix.png" alt="jefflix.png" />
+                                    </a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
@@ -239,7 +241,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/wto.jpg" alt="wto.jpg" />
+                                    <a href="https://js-bogart.github.io/William-Tell-Overdrive/">
+                                        <img class="img-fluid rounded mb-5" src="assets/img/portfolio/wto.jpg" alt="wto.jpg" />
+                                    </a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
@@ -271,7 +275,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/nomad.png" alt="nomad.png" />
+                                    <a href="https://nomad2.herokuapp.com/#/">
+                                        <img class="img-fluid rounded mb-5" src="assets/img/portfolio/nomad.png" alt="nomad.png" />
+                                    </a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
@@ -303,7 +309,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/menu-app.png" alt="menu-app.png" />
+                                    <a href="https://menu-item-app.herokuapp.com/#/">
+                                        <img class="img-fluid rounded mb-5" src="assets/img/portfolio/menu-app.png" alt="menu-app.png" />
+                                    </a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
@@ -335,7 +343,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/loan-calc.png" alt="loan-calc.png" />
+                                    <a href="https://js-bogart.github.io/Loan-Calculator/">
+                                        <img class="img-fluid rounded mb-5" src="assets/img/portfolio/loan-calc.png" alt="loan-calc.png" />
+                                    </a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
