Add descriptions to portfolio items

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                         <img class="img-fluid rounded mb-5" src="assets/img/portfolio/jefflix.png" alt="jefflix.png" />
                                     </a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">Jefflix is a web-based app for browsing and watching movie trailers of the greatest films ever created. Users can search for films, browse by genre, or create a list of their favorites.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -245,7 +245,10 @@
                                         <img class="img-fluid rounded mb-5" src="assets/img/portfolio/wto.jpg" alt="wto.jpg" />
                                     </a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">You are a descendent of the Swiss folk hero William Tell in the year 2420, and have been traveling the galaxy hunting
+                                    Space Tyrants. You have just been sent word that the evil Celestial Reich has sent their newest super weapon, the Murder
+                                    Moon, to destroy Earth. You only have one chance to save Earth: you must fire a Starbolt from your Cosmic Crossbow and
+                                    blast the Murder Moon apart. You are going to need perfect aim.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -279,7 +282,9 @@
                                         <img class="img-fluid rounded mb-5" src="assets/img/portfolio/nomad.png" alt="nomad.png" />
                                     </a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">Need help planning your next outdoor trip? Consider using Nomad, an outdoor backpacking app that makes it easy for users
+                                    to plan a trip around popular trails in California. Select a trail to view its details and weather forecast. Once you've
+                                    decided on a route, you can pack your essentials to go along with your trip.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -313,7 +318,7 @@
                                         <img class="img-fluid rounded mb-5" src="assets/img/portfolio/menu-app.png" alt="menu-app.png" />
                                     </a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">Menu Generator allows users to upload menu items to the app's database, and create lists of select items.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -347,7 +352,7 @@
                                         <img class="img-fluid rounded mb-5" src="assets/img/portfolio/loan-calc.png" alt="loan-calc.png" />
                                     </a>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">Loan Calculator allows users to calculate monthly loan repayments, total interest, and total repayment based on loan amount, interest rate, and loan term.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
