Make Contact section more responsive

--- a/index.html
+++ b/index.html
@@ -162,9 +162,16 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Contact Section Info-->
-                <div class="contact-info">
-                    <h4>Phone Number: +1 (805) 844-7769</h4>
-                    <h4>Email: jeffreysbogart@gmail.com</h4>
+                <div class="contact-info-wrap">
+                <!-- <div class="contact-info"> -->
+                    <div class="contact-info">
+                        <h4>Phone Number: &nbsp;</h4>
+                        <h4>+1 (805) 844-7769</h4>
+                    </div>
+                    <div class="contact-info">
+                        <h4>Email: &nbsp;</h4>
+                        <h4>jeffreysbogart@gmail.com</h4>
+                    </div>
                 </div>
             </div>
         </section>
