--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
                     </div>
                     <div class="contact-info">
                         <h4>Email: &nbsp;</h4>
-                        <h4>jeffreysbogart@gmail.com</h4>
+                        <!-- <h4>jeffreysbogart@gmail.com</h4> -->
+                        <a href="mailto:jeffreysbogart@gmail.com">jeffreysbogart@gmail.com</a>
                     </div>
                 </div>
             </div>
